# alizode

./: .gitignore  .mcp.json  ACP_MIGRATION.md  AGENTS.md  CLAUDE.md  DESIGN_IMPLEMENTATION.md  IMPROVEMENT_PLAN.md  PLAN.md  PLAN_HTTP_MCP.md  PLAN_KRYPTON_PARITY.md  PLAN_TEAM_SYSTEM.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json
.github/workflows/: ci.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_teams.sql
src-tauri/src/: harness_mcp.rs  lib.rs  main.rs
src-tauri/src/commands/: agent.rs  inter_lane.rs  lane.rs  library.rs  mcp_config.rs  memory.rs  mod.rs  permission.rs  review.rs  team.rs  terminal.rs  workspace.rs
src-tauri/src/core/: acp.rs  agent_registry.rs  inter_lane.rs  lane_bus.rs  lane_inbox.rs  mod.rs
src-tauri/src/permission/: categories.rs  engine.rs  mod.rs  session_cache.rs
src-tauri/src/store/: db.rs  models.rs
src-tauri/src/util/: error.rs  mod.rs
src/components/agent-picker/: AgentPicker.tsx
src/components/command-bar/: CommandBar.tsx
src/components/lane-list/: LaneList.tsx
src/config/: team-directives.json
src/hooks/: useHarnessCoordinator.ts  useKeyboardShortcuts.ts  useLaneStream.test.tsx  useLaneStream.ts  useMcpStats.ts  useWorkspace.ts
src/lib/: acp-client.test.ts  acp-client.ts  acp-events.ts  acp-types.ts  characters.ts  format.test.ts  format.ts  mcp-bridge.ts  review.ts  team-context.test.ts  team-context.ts  team-roles.ts
src/styles/: global.css  tokens.css
(+39 files in other folders)
