[package]
name = "alizode"
version = "0.1.0"
edition = "2021"
default-run = "alizode"

[lib]
name = "alizode_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "alizode"
path = "src/main.rs"

[[bin]]
name = "alizode-mcp"
path = "src/bin/mcp_bridge.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "process", "io-util", "time", "rt"] }
anyhow = "1"
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
